--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,8 @@
         <title>Omnifood</title>
     </head>
     <body>
-        <header>
+        <header class="hero">
+
             <nav>
                 <div class="row">
                     <img src="assets/img/logo-white.png" alt="Omnifood logo" class="logo">
@@ -24,18 +25,21 @@
                         <li><a href="#cities">Our cities</a></li>
                         <li><a href="#plans">Sign up</a></li>
                     </ul>
-                    <a class="mobile-nav-icon js--nav-icon"><i class="ion-navicon-round"></i></a>
+                    <!--
+                    <a class="mobile-nav-icon"><i class="ion-navicon-round"></i></a>
+                    -->
                 </div>
             </nav>
-            <div class="hero-text-box">
+
+            <div class="hero--text-box">
                 <h1>Goodbye junk food.<br>Hello super healthy meals.</h1>
-                <a class="btn btn-full js--scroll-to-plans" href="#">I'm hungry</a>
-                <a class="btn btn-ghost js--scroll-to-start" href="#">Show me more</a>
+                <a class="btn btn--full" href="#">I'm hungry</a>
+                <a class="btn btn--ghost" href="#">Show me more</a>
             </div>
             
         </header>
         
-        <section class="section-features js--section-features" id="features">
+        <section class="section-features" id="features">
             <div class="row">
                 <h2>Get food fast &mdash; not fast food</h2>
                 <p class="long-copy">
